# SOFIA

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
agent-loop/: .gitignore  README.md  pyproject.toml
agent-loop/agent_loop/: __init__.py  admission.py  arbiter.py  author.py  demo.py  emissions.py  fetchers.py  gates.py  identity.py  ledger.py  log.py  manifest.py  prep.py  real_hats.py  reviewers.py  run_real.py  runner.py  scenarios.py  stubs.py  transport.py
agent-loop/baselines/: COLD-REVIEW-2-Findings.md  COLD-REVIEW-Findings.md
agent-loop/deliberation/: loop-dev-state-2026-07-04.md  loop-dev-state-2026-07-05.md  loop-dev-state-2026-07-06.md
agent-loop/deliberation/adr-003-platform-patterns/: run-034-docket-rulings.md
agent-loop/deliberation/adr-004-graph-fresh-schema-file-driven-ingestion/: run-036-docket-rulings.md
agent-loop/deliberation/ddr-002-amendment-batch/: record.md
agent-loop/deliberation/ddr-003-feedback-loop-governance/: run-032-docket-rulings.md  run-033-docket-rulings.md
agent-loop/design/: README.md  antagonist-EA.prompt.md  antagonist-LAA.prompt.md  antagonist-SA.prompt.md  antagonist-stub.prompt.md  arbiter-classifier.prompt.md  author.prompt.md  coherence-sweep.prompt.md  dummy-case.md  ledger-schema.md  mechanical-gates.md  rbt-10-run-037-prompt.md  rbt-14-run-032-prompt.md  rbt-14-run-033-prompt.md  rbt-69-implementation-prompt.md  rbt-69-loop-optimization.spec.md  rbt-71-commit-prompt.md  rbt-71-decision-surface.spec.md  rbt-71-implementation-prompt.md  rbt-71-promotion-prompt.md  rbt-71-proving-run-prompt.md  rbt-9-run-034-prompt.md  run-prep.contract.md  run-supervision-s2-amendment.md  run-supervision.protocol.md  runner-real-hats.contract.md
agent-loop/runs/run-004-distilled-set/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-005-distilled-set/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-006-distilled-set/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-007-distilled-set/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-008-sdd-001/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-009-sdd-001/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-010-sdd-001/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-011-sdd-001/: action-log.jsonl  audit.md  disposition.md  ledger.json  manifest.json
agent-loop/runs/run-012-sdd-001/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-014-ddr-004/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-015-ddr-004/: action-log.jsonl  audit.md  disposition.md  ledger.json  manifest.json
agent-loop/runs/run-016-ddr-002/: action-log.jsonl  invalid.md  ledger.json  manifest.json
agent-loop/runs/run-017-ddr-002/: action-log.jsonl  audit.md  disposition.md  ledger.json  manifest.json
agent-loop/runs/run-018-ddr-002/: action-log.jsonl  audit.md  coherence-addendum.txt  disposition.md  ledger.json  manifest.json
agent-loop/runs/run-019-adr-003-sandbox/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-020-adr-003-sandbox-r2/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-021-adr-003-sandbox-r3/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-023-adr-003-sandbox-r5/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-024-adr-004/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-025-adr-008/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-026-adr-008/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-027-adr-008/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-028-adr-008/: action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-029-adr-008-rbt69/: PRE-REGISTRATION.md  RAW-RESULT.md  action-log.jsonl  ledger.json  manifest.json
agent-loop/runs/run-030-adr-008-rbt69/: PRE-REGISTRATION.md  RAW-RESULT.md  action-log.jsonl  audit.md  ledger.json  manifest.json  rbt-71-categorization.json  rbt-71-refusal-analysis.md
agent-loop/runs/run-031-adr-008-rbt71/: action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-032-ddr-003-rbt14/: PRE-REGISTRATION.md  RAW-RESULT.md  action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-033-ddr-003-rbt14-v020/: PRE-REGISTRATION.md  RAW-RESULT.md  action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-034-adr-003-rbt9/: RAW-RESULT.md  action-log.jsonl  audit.md  ledger.json  manifest.json
agent-loop/runs/run-035-adr-004-rbt10/: action-log.jsonl  findings-informational-dump.txt  ledger.json  manifest.json
agent-loop/runs/run-036-adr-004-rbt10/: action-log.jsonl  ledger.json  manifest.json  open-findings-full.md  sandbox-vs-canonical.diff
agent-loop/runs/run-037-adr-004-rbt10/: action-log.jsonl  ledger.json  manifest.json
agent-loop/tests/: test_admission.py  test_arbiter.py  test_author.py  test_cache_provenance.py  test_demo.py  test_gates.py  test_identity.py  test_prep.py  test_real_hats.py  test_run_prep.py  test_runner_and_persistence.py  test_scenarios.py
agent-loop/tests/fixtures/: author_preamble_run027_ef063aa4.txt
agent-loop/triage/triage-001-distilled-set/: code-prompt.md  record.md
knowledge_service/: .env.example  Dockerfile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
knowledge_service/app/: __init__.py  config.py  main.py  models.py
knowledge_service/app/adapters/: __init__.py  in_memory_graph.py  neo4j_adapter.py
knowledge_service/app/domain/: __init__.py  (+1 more)
knowledge_service/tests/: __init__.py  conftest.py
tools/: README.md  pyproject.toml  requirements.txt  run_conformance_1a.py
tools/seed_loader/: __init__.py  cli.py  loader.py  manifest.py  parser.py  schema.py
tools/tests/: test_manifest.py  test_parser.py
(+1815 files in other folders)
