[project]
name = "agent-loop"
version = "0.1.0"
description = "Walking skeleton for the design-review agent loop (dry-mode plumbing)."
requires-python = ">=3.11"
dependencies = ["anthropic>=0.40"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.pytest.ini_options]
# -p no:asyncio disables an unrelated globally-installed pytest-asyncio plugin;
# this harness is synchronous (a deterministic single-process runner, not an
# async service — a stated misfit with the async-first service convention).
addopts = "--cov=agent_loop --cov-report=term-missing --cov-fail-under=90 -p no:asyncio"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["agent_loop"]

[tool.coverage.report]
show_missing = true
# No omit list: every module here carries testable logic. The LlmArbiter adapter
# is the one real-infrastructure seam and is covered by a construction/guard test,
# not omitted.

[tool.setuptools]
# Explicit package list: agent-loop/ holds non-package sibling directories
# (runs/, design/, triage/, deliberation/) that setuptools flat-layout
# auto-discovery refuses to disambiguate. Latent since those siblings first
# existed — surfaced by the first agent-loop-tests CI run (PR #15): the
# editable install had never been exercised; local pytest imports via rootdir.
packages = ["agent_loop"]
